gccida/c3/try_crossjump_to_edge
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1780:4: error: expected ';' after expression
rtx i; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1780:5: error: use of undeclared identifier 'i'
rtx i; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1781:4: error: expected ';' after expression
rtx v44; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1781:5: error: use of undeclared identifier 'v44'
rtx v44; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1785:4: error: expected ';' after expression
rtx v48; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1785:5: error: use of undeclared identifier 'v48'
rtx v48; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1786:4: error: expected ';' after expression
rtx v49; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1786:5: error: use of undeclared identifier 'v49'
rtx v49; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1788:6: error: use of undeclared identifier 'v51'
rtx *v51; // rsi 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1793:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v56; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1798:4: error: expected ';' after expression
rtx reg_equal_equiv_note; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1798:5: error: use of undeclared identifier 'reg_equal_equiv_note'; did you mean 'find_reg_equal_equiv_note'?
rtx reg_equal_equiv_note; // r15 
    ^~~~~~~~~~~~~~~~~~~~
    find_reg_equal_equiv_note
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/rtl.h:1491:12: note: 'find_reg_equal_equiv_note' declared here
extern rtx find_reg_equal_equiv_note    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1799:4: error: expected ';' after expression
rtx v63; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1799:5: error: use of undeclared identifier 'v63'
rtx v63; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1824:4: error: expected ';' after expression
rtx v88; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1824:5: error: use of undeclared identifier 'v88'
rtx v88; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1826:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1826:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/cfgcleanup.c:1970:1: error: use of undeclared identifier 'v48'
v48 = pc_set( src->end); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/try_crossjump_to_edge/src/obj/cfgcleanup.o] Error 1
